2008-10-20  Ben Abbott  <bpabbott@mac.com>

	* plot/__stem__.m: Respect new ordering of children when setting
	baseline.

2008-10-20  David Bateman  <dbateman@free.fr>

	* plot/plotyy.m: Test that an axes handle actually is one before
	setting it.

2008-10-17  David Bateman  <dbateman@free.fr>

	* plot/__plt_get_axis_arg__.m: Exclude non-numeric and root figure
	from potential axis handles.
	* plot/colorbar.m: Remove debug output.
	* plot/comet.m: Close plot before demo
	* plot/contourc.m: No output if nargout == 0.

2008-10-16  David Bateman  <dbateman@free.fr>

	* plot/subplot.m: Allow for column vector of children for figure.

2008-10-16  John W. Eaton  <jwe@octave.org>

	* testfun/rundemos.m: New function.

2008-10-16  Ben Abbott  <bpabbott@mac.com>

	* plot/contourf.m: Correct order of patch object handles.

2008-10-16  David Bateman  <dbateman@free.fr>

	* plot/colorbar.m (colorbar:resetaxis): Uncomment the reseting of
	the axes.

	* plot/newplot.m: Don't preserve axes properties here, but rather
	do it in the graphics handle code so that the preservation can be
	done after callbacks are executed.
	
	* plot/__go_draw_axes__.m: If current plot is an image, don't flag
	the plot as binary, as the binary specification is already in the
	"usingclause".
	
	* plot/__go_draw_figure__.m: Always use multiplot and create an 
	enclosing axis to ensure bounding box of postscript is correct.

2008-10-16  Ben Abbott  <bpabbott@mac.com>

	* plot/__go_draw_axes__.m (do_tics_1): New arg, interpreter.
	(do_tics): Pass interpreter to do_tics_1.

2008-10-15  David Bateman  <dbateman@free.fr>

	* general/colon.m: Small typo.
	* general/loadobj.m: Ditto.

2008-10-14  Ben Abbott  <bpabbott@mac.com>

	* plot/__go_draw_axes__.m (do_tics_1): New args, fontname and fontsize.
	Pass fontspec for tic marks to gnuplot.
	(do_tics): Pass axes fontname and fontsize to do_tics_1.
	
	* plot/newplot.m: Perserve fontangle, fontname, fontsize,
	fontunits, fontweight, position, outerposition, and