@@ -3,6 +3,8 @@
 	* plot/__stem__.m: Respect new ordering of children when setting
 	baseline.
 
+	* plot/orient.m, plot/print.m: Properly validate figure handle.
+
 2008-10-20  David Bateman  <dbateman@free.fr>
 
 	* plot/plotyy.m: Test that an axes handle actually is one before
